--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="login_failed">"Login failed"</string>
     <string name="prompt_import">Import</string>
     <string name="prompt_change_password">Change password</string>
-    <string name="prompt_loading">Loading data...</string>
+    <string name="prompt_loading">Loading data…</string>
     <string name="prompt_data">Data</string>
     <string name="tap_again">Tap again to exit.</string>
     <string name="prompt_exit">Exit</string>
@@ -41,4 +41,5 @@
     <string name="prompt_password_changed">Password changed successfully.</string>
     <string name="confirm_delete">Do you want to delete this record?\nThis option can\'t be undone.</string>
     <string name="prompt_new">New</string>
+    <string name="prompt_read_permissions">Unable to read file. See permissions.</string>
 </resources>
