--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,9 @@
     <string name="confirm_delete">Do you want to delete this record?\nThis option can\'t be undone.</string>
     <string name="prompt_new">New</string>
     <string name="prompt_read_permissions">Unable to read file. See permissions.</string>
+    <string name="auth_failed">Authentication failed...!</string>
+    <string name="auth_error">Authentication error:</string>
+    <string name="auth_title">Biometric Authentication</string>
+    <string name="btn_auth">Click button to authenticate</string>
+    <string name="prompt_auth">Authenticate</string>
 </resources>
