--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -42,10 +42,13 @@
         deshacer.</string>
     <string name="prompt_new">Nuevo</string>
     <string name="prompt_read_permissions">No se puede leer el fichero. Revisar los permisos.</string>
-    <string name="auth_failed">Autenticación erronea...!</string>
+    <string name="auth_failed">Autenticación erronea…!</string>
     <string name="auth_error">Error autenticando:</string>
     <string name="auth_title">Autenticación biométrica</string>
     <string name="btn_auth">Clic para autenticarte</string>
     <string name="prompt_auth">Autenticar</string>
+    <string name="storage_perm">No tiene permiso de acceso a almacenamiento</string>
+    <string name="select_file">Debe seleccionar un fichero</string>
+    <string name="str_create">Crear</string>
 
 </resources>
